Fixed work section layout bug

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -13,6 +13,7 @@ html {
     overflow: hidden;
     scroll-behavior: smooth;
     overflow-y: scroll;
+    letter-spacing: 0.08rem;
 
     @include respond(big-desktop) {
         //1856px
@@ -92,6 +93,13 @@ body {
 
         &--about {
             letter-spacing: 1px;
+        }
+        &--work {
+            min-height: 62rem;
+            flex-direction: column;
+            gap: 3rem;
+            align-items: flex-start;
+            gap: 0rem 10rem;
         }
 
         &--contact {
