--- a/src/sass/base/animations.scss
+++ b/src/sass/base/animations.scss
@@ -76,7 +76,7 @@
     }
 
     100% {
-        height: calc(100% + 13rem);
+        height: calc(100% + 12rem);
     }
 }
 
