--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -28,7 +28,7 @@
     @include neumorph(true, 33px, 70px, 5rem, #202428, #32363d);
     overflow: hidden;
     gap: 7rem;
-    max-width: 173em;
+    max-width: 173rem;
 }
 
 @mixin container {
