--- a/src/sass/sections/_work.scss
+++ b/src/sass/sections/_work.scss
@@ -1,88 +1,34 @@
-.grid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 35rem 35rem 35rem 35rem;
-    grid-template-rows: 12rem 12rem 12rem 12rem;
-    justify-content: space-between;
-
-    @include respond(tab-port-small) {
-        grid-template-columns: 35rem;
-        grid-template-rows: 12rem 12rem 12rem 12rem;
-        gap: 9rem;
-        justify-content: center;
-        & > div {
-            grid-column-start: 1;
-            grid-column-end: 2;
-            transform: scale(1.4);
-        }
-    }
-}
-
-.item {
+.work {
+    flex: 1 1 38rem;
+    min-width: 38rem;
     display: flex;
     flex-direction: column;
     padding: 1.5rem 2.5rem;
-    transition: all 0.6s;
+    transition: max-height 0.6s;
     color: $color-white;
     overflow: hidden;
+    max-height: 12rem;
     @include neumorph(false, 1rem, 3rem, 2rem, $box-shadow-one, $box-shadow-two);
+
+    &--1 {
+        align-self: flex-end;
+    }
+
+    &--2 {
+        margin-left: 50%;
+    }
+
+    &--3 {
+        margin-left: 25%;
+    }
+
+    &--4 {
+        align-self: flex-start;
+    }
+
     &:hover {
+        max-height: 25rem;
         border: 2px solid #22242a;
-    }
-
-    &--a {
-        z-index: 100;
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 4;
-        grid-row-end: 4;
-
-        &:hover {
-            transform: translateY(-13rem);
-            animation-name: work;
-            animation-duration: 0.6s;
-            animation-fill-mode: forwards;
-        }
-    }
-    &--b {
-        z-index: 80;
-        grid-column-start: 2;
-        grid-column-end: 3;
-        grid-row-start: 3;
-        grid-row-end: 3;
-
-        &:hover {
-            transform: translateY(-13rem);
-            animation-name: work;
-            animation-duration: 0.6s;
-            animation-fill-mode: forwards;
-        }
-    }
-    &--c {
-        z-index: 70;
-        grid-column-start: 3;
-        grid-column-end: 4;
-        grid-row-start: 2;
-        grid-row-end: 2;
-
-        &:hover {
-            animation-name: work;
-            animation-duration: 0.6s;
-            animation-fill-mode: forwards;
-        }
-    }
-    &--d {
-        z-index: 60;
-        grid-column-start: 4;
-        grid-column-end: 5;
-        grid-row-start: 1;
-        grid-row-end: 1;
-
-        &:hover {
-            animation-name: work;
-            animation-duration: 0.6s;
-            animation-fill-mode: forwards;
-        }
     }
 
     &__experience {
